feat: add public Ticket comments
